apps/unifi-controller/k8s.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: unifi-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-controller
    spec:
      nodeSelector:
        node-role/workload: zfs
      hostNetwork: true
      containers:
      - name: unifi-controller
        image: ghcr.io/linuxserver/unifi-controller:8.0.24
        resources:
          requests:
            cpu: 100m
            memory: 1792Mi
        volumeMounts:
          - name: config
            mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /vol_raidz1/docker/configs/unify-controller/config
            type: Directory
