apps/unifi-controller/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: unifi-controller
spec:
  type: ClusterIP
  externalIPs:
    - 192.168.1.45
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: unifi-controller
