apps/unifi-controller/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: unifi-controller
    namespace: media
    annotations:
        argocd.argoproj.io/sync-wave: "30"
        traefik.ingress.kubernetes.io/router.entrypoints: web239,websecure239
        traefik.ingress.kubernetes.io/service.serversscheme: https
        traefik.ingress.kubernetes.io/service.serverstransport: kube-system-insecure-skip-verify@kubernetescrd
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:C4dBaYlF6yRQOt2V551XpCsMmbZ3s5GgjSVY,iv:vJjROPJpNFKr97u9r+GO8eMW26C9kq5Q1tMDUod+PrE=,tag:4AYejEw97q9iY1ucPKea1Q==,type:str]
          secretName: wildcard-cloudflare-production-02
    rules:
        - host: ENC[AES256_GCM,data:AH+sqI/TEBNMBeNLasAe5BmBD+TmWcgSnRu+,iv:C7Cjiu1YmYwLJ4M6ccIERgOQM0BNxlSfeBzu2rE2qpY=,tag:QH4gybo7Yzj7xAjTripQYA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: unifi-controller
                        port:
                            number: 8443
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2cHEvaE5HTEdFdVR3VkJO
[...]
            duvV2xv+NnzU9IYqsgEzd541GA2dctP0CiKJ4+yFZI7jDhZYUuBx5A==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsbWlVOTlpb2hrYWowTFVp
[...]
            HPKHPUOgRK826e8Cc9/GAWQt/+SVg/HQ0813i2RNgrv7aLRXjKOfNw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-01T11:21:10Z"
    mac: ENC[AES256_GCM,data:2gfIQjZlkZklHFSWsZfdHcjn4SZrMKglkekpBKPT0k5/Ox2IqfhFRTTeYqE+xOCGRjPiCV5AEktJCDjXso5potA/fvLYr8VSWQv54WBMONeqQvoWPimS8CEWd+ilWwkVXhlzKkzxkeBfNSXY0rLa5d/z1XeXFDp+s6+RGYeZRSg=,iv:LlgccfskwGGyHfy0505Rir4F/6jkpH4MM+aqtKw66/w=,tag:lPYOgjSCgAGL0AKJAze+5g==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.11.0
