apps/unifi-controller/k8s.backup-cronjob.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backup-unifi-controller
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: backup-unifi-controller
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: monitoring
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: prometheus-pushgateway
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
    # Local restic REST-server (primary backup target)
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: backup
            k8s:io.kubernetes.pod.namespace: backup
            k8s:app.kubernetes.io/name: rest-server
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    # ntfy notifications on failure
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
